CSRV-74 Выдача действий пользователю
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@259 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -185,3 +185,8 @@ div.release-date {
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+
+table.data td.checkbox-cell {
+	padding: 0.35em 0.35em 0.25em 0.35em;
+	text-align: center;
+}
