Added release notes to the Home page
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@303 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -190,3 +190,32 @@ table.data td.checkbox-cell {
 	padding: 0.35em 0.35em 0.25em 0.35em;
 	text-align: center;
 }
+
+ul.release-notes {
+	list-style-type: none;
+	list-style-position: outside;
+	padding-left: 10px;
+	font-size: 14px;
+	font-size: larger;
+}
+
+ul.release-notes li {
+	font-weight: bold;
+}
+
+ul.release-notes ul {
+	line-height: 20px;
+	height: 20px; list-style-image : url("../img/li.gif");
+	margin-left: 3em;
+	font-size: medium;
+	list-style-image: url("../img/li.gif");
+}
+
+ul.release-notes ul li {
+	font-weight: normal;
+}
+
+.release-date {
+	position: static;
+	color: #3366CC;
+}
