--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -8,15 +8,17 @@ body {
 	margin: 0;
 	padding: 0;
 }
-
 .cp-bar {
 	text-align: left;
 	background-color: #E5ECF9;
 	border-top: 1px solid #3366CC;
-	margin: 0 0 1em;
-	padding: 0.25em 0.5em;
+	margin: 0em;
+	padding: 0.5em;
+	
 }
-
+div.line {
+ display: inline;
+}
 #userinfo ul li {
 	display: inline;
 }
@@ -24,11 +26,13 @@ body {
 #userinfo {
 	text-align: right;
 	margin: 0.5em 1em;
+	font-size: 13pt;
+	font-weight: 500;
 }
 
 .p-unit {
-	margin-left: 1em;
-	padding: 1em;
+	padding-top: 1em;
+	padding-left: 1em;
 }
 
 .p-content {
@@ -45,11 +49,22 @@ body {
 
 .p-nav ul li {
 	list-style-type: none;
-	line-height: 1.5em;
+	line-height: 2em;
 }
-
+.p-nav ul li a:hover{
+	
+	background: #E5ECF9;
+   color:#000000;
+   text-decoration: none;
+   display: block;
+	font-weight: bold;
+	display: block;
+	
+}
 .p-nav li a:link,.p-nav li a:visited {
 	color: #3366CC;
+	text-decoration: none;
+	display: block;
 }
 
 .p-section,.cp-bar {
@@ -102,7 +117,8 @@ table.data {
 	border: 1px solid #C5D7EF;
 	empty-cells: show;
 	margin-bottom: 0.5em;
-	width: 100%;
+	width: 98.5%
+	
 }
 
 table.data thead th {
@@ -118,7 +134,6 @@ table.data td {
 	border: 1px solid #C5D7EF;
 	padding: 0.35em 1em 0.25em 0.35em;
 }
-
 table.data td a {
 	margin-left: 0.5em;
 	margin-right: 0.5em;
@@ -190,3 +205,29 @@ table.data td.checkbox-cell {
 	padding: 0.35em 0.35em 0.25em 0.35em;
 	text-align: center;
 }
+
+ul.sub-role {
+	list-style-type: none;
+	list-style-position: outside;
+	padding-left: 10px;
+	font-size: 14px;
+	font-size: larger;
+}
+
+ul.sub-role li {
+	font-weight: bold;
+	list-style: none;
+}
+	
+ul.sub-role ul {
+	line-height: 25px;
+	margin-left: 3em;
+	font-size: medium;
+	
+}
+
+ul.sub-role ul li {
+	font-weight: normal;
+}
+
+
