created page ChangeGroupActionsPage
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@447 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -207,7 +207,7 @@ div.release-date {
 	margin-bottom: 5px;
 }
 
-table.data td.checkbox-cell {
+table.data td.checkbox-cell, table.data th.checkbox-cell{
 	padding: 0.35em 0.35em 0.25em 0.35em;
 	text-align: center;
 }
