подправил немного стили (в процессе)
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@725 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -64,11 +64,9 @@ div.line {
 	text-decoration: none;
 	display: block;
 	font-weight: bold;
-	display: block;
 }
 
 .p-nav li a:link,.p-nav li a:visited {
-	color: #3366CC;
 	text-decoration: none;
 	display: block;
 }
@@ -78,18 +76,13 @@ div.line {
 	margin-right: 1em;
 }
 
-/*used in javascript to highlight selected menu option*/
 .p-nav-selected {
-	-moz-border-radius-bottomleft: 4px;
-	-moz-border-radius-topleft: 4px;
 	background-color: #E5ECF9;
-	color: #000000;
-	display: block;
 	font-weight: bold;
-	display: block;
+	color: #000000;
 }
 
-a:link,a:visited {
+a:link,a {
 	color: #0000CC;
 }
 
