--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
@@ -32,9 +32,9 @@
        </td>
        <td>
            <div class="mapping-buttons">
-       		  <div style="padding-bottom: 1em;"><input type="submit" value="Grant &gt;"wicket:id="add-items" class="button"/></div>
-	          <input type="submit" value="&lt; Prohibit"wicket:id="remove-items" class="button"/>
-	        </div>
+       		  <div style="padding-bottom: 1em;"><input type="submit" value="Grant &gt;"wicket:id="add-items" class="mapping-button"/></div>
+	          <input type="submit" value="&lt; Prohibit"wicket:id="remove-items" class="mapping-button"/>
+	       </div>
        </td>
        <td>
          <div class="mapping-search" wicket:id="search-mapped-container">
