добивил компоненты, переделал формы
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@735 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/ConfirmPanel.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/ConfirmPanel.html
@@ -2,8 +2,8 @@
 	<div class="dinamicPanel">	
 	<form wicket:id="cform">
 	<span wicket:id="message">Here goes confirm message</span>&nbsp;&nbsp;&nbsp;
-	<input type="submit" wicket:id="confirm" value="Confirm"/>&nbsp;&nbsp;&nbsp;
-	<input type="submit" wicket:id="cancel" value="Cancel"/>
+	<input type="submit" wicket:id="confirm" value="Confirm" class="button"/>&nbsp;&nbsp;&nbsp;
+	<input type="submit" wicket:id="cancel" value="Cancel" class="button"/>
 	</form>
 	</div>
 </wicket:panel>
