--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
@@ -7,16 +7,20 @@
 <body>
 <wicket:panel>
  <form wicket:id="form-mapping">
- <table>
-    <tr>
-       <td>
-    <div class="mapping-search" wicket:id="search-unmapped-container">
-           <div class="mapping-search-text">
-             <input type="text" wicket:id="unmapped-str" class="mapping-search-input"/>        
-           </div>
-           <input type="submit" value="Search" class="mapping-search-button"/>        
+<div class="mapping-wrap-container"> 
+ <div class="mapping-left-container">
+    <div wicket:id="search-unmapped-container">
+           <table class="mapping-search">
+              <tr>
+                 <td class="mapping-search-text">
+                   <input type="text" wicket:id="unmapped-str" class="mapping-search-input"/>        
+                 </td>
+                 <td>
+                   <input type="submit" value="Search" class="mapping-search-button"/>        
+                 </td>
+              </tr>
+           </table>
     </div>
-    
 	<div wicket:id="checkgroup-unmapped">
    	  <div class="mapping-hader">
    	     <span class="mapping-header-checkbox-cell"><input type="checkbox" wicket:id="master-checkbox-unmap"/></span>
@@ -29,21 +33,27 @@
 	    </div>
 	   </div>
      </div>
-       </td>
-       <td>
-           <div class="mapping-buttons">
+  </div>   
+          
+           <div class="mapping-buttons-container">
        		  <div style="padding-bottom: 1em;"><input type="submit" value="Grant &gt;"wicket:id="add-items" class="mapping-button"/></div>
 	          <input type="submit" value="&lt; Prohibit"wicket:id="remove-items" class="mapping-button"/>
 	       </div>
-       </td>
-       <td>
-         <div class="mapping-search" wicket:id="search-mapped-container">
-           <div class="mapping-search-text">
-             <input type="text" wicket:id="mapped-str" class="mapping-search-input"/>        
-           </div>
-            <input type="submit" value="Search" class="mapping-search-button"/>        
-         </div>
-	    <div wicket:id="checkgroup-mapped">	
+	       
+	<div class="mapping-right-container">    
+      <div wicket:id="search-mapped-container">
+           <table class="mapping-search">
+              <tr>
+                 <td class="mapping-search-text">
+                   <input type="text" wicket:id="mapped-str" class="mapping-search-input"/>        
+                 </td>
+                 <td>
+                   <input type="submit" value="Search" class="mapping-search-button"/>        
+                 </td>
+              </tr>
+           </table>  
+      </div>
+	  <div wicket:id="checkgroup-mapped">	
 	     <div class="mapping-hader">
 	        <span class="mapping-header-checkbox-cell"><input type="checkbox" wicket:id="master-checkbox-map"/></span>
 	        <span class="mapping-header-item-name">Granted <span wicket:id="mapped-item-name"></span></span>
@@ -54,10 +64,9 @@
 	            <span class="mapping-row-item-name" wicket:id="mapped-name"></span>
 	          </div>
 	       </div>
-	     </div>
-       </td>
-    </tr>
- </table>
+	  </div>
+	 </div> 
+</div>	 
 </form>
 </wicket:panel>
 </body>
