Fixed a problem with wrong search results for recurring searches on MappingPanel
git-svn-id: https://superfly.googlecode.com/svn/trunk/superfly@738 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/mapping/MappingPanel.html
@@ -16,7 +16,7 @@
                    <input type="text" wicket:id="unmapped-str" class="mapping-search-input"/>        
                  </td>
                  <td>
-                   <input type="submit" value="Search" class="mapping-search-button"/>        
+                   <input type="submit" wicket:id="unmapped-search-button" value="Search" class="mapping-search-button"/>        
                  </td>
               </tr>
            </table>
@@ -48,7 +48,7 @@
                    <input type="text" wicket:id="mapped-str" class="mapping-search-input"/>        
                  </td>
                  <td>
-                   <input type="submit" value="Search" class="mapping-search-button"/>        
+                   <input type="submit" wicket:id="mapped-search-button" value="Search" class="mapping-search-button"/>        
                  </td>
               </tr>
            </table>  
