#21054 "Доработка юзабилити и дизайна Superfly" in progress
git-svn-id: https://superfly.googlecode.com/svn/branches/R1.5@931 11a29e22-99e0-9bb7-d19e-9a0993c63ea3

--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelDropDownChoiceRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelDropDownChoiceRow.html
@@ -1,10 +1,12 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-  <li class="text-field-required" wicket:id="container">
-    <label wicket:id="label-id" class="field-label-text" for="name">Label name</label>
-    <select tabindex="0" wicket:id="field-id" class="field-select">
-      <option value="0">null</option>
-    </select>
-  </li>
+    <div class="control-group" wicket:id="container">
+        <label class="control-label" wicket:id="label-id" for="name">Label name</label>
+        <div class="controls">
+            <select tabindex="0" wicket:id="field-id" >
+                <option value="0">null</option>
+            </select>
+        </div>
+    </div>
 </wicket:panel>
 </html>
