--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelPasswordTextFieldRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelPasswordTextFieldRow.html
@@ -1,8 +1,10 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-    <li class="text-field" wicket:id="row">
-        <label class="field-label-text" wicket:id="label-id" for="name">Label name</label>
-        <input class="field-input-text" wicket:id="field-id" type="password"/>
-    </li>
+    <div class="control-group" wicket:id="row">
+        <label class="control-label" wicket:id="label-id" for="name">Label name</label>
+        <div class="controls">
+            <input wicket:id="field-id" type="password"/>
+        </div>
+    </div>
 </wicket:panel>
 </html>
