--- a/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelValueRow.html
+++ b/superfly-web/src/main/java/com/payneteasy/superfly/web/wicket/component/field/LabelValueRow.html
@@ -1,8 +1,12 @@
 <html xmlns:wicket="http://wicket.apache.org/dtds.data/wicket-xhtml1.4-strict.dtd">
 <wicket:panel>
-  <li class="text-field-required">
-    <label wicket:id="label-id" class="field-label-text">Label name</label>
-    <label wicket:id="field-id" class="field-value-text">Value</label>
-  </li>
+
+
+    <div class="control-group">
+        <label class="control-label" wicket:id="label-id" >Label name</label>
+        <div class="controls">
+            <label wicket:id="field-id"></label>
+        </div>
+    </div>
 </wicket:panel>
 </html>
