--- a/superfly-web/src/main/webapp/css/main.css
+++ b/superfly-web/src/main/webapp/css/main.css
@@ -1,193 +1,124 @@
-body {
-	font: normal normal normal 100%/normal arial, sans-serif;
+
+/*            FEEDBACK PANEL              */
+.feedbackPanel {
+    padding: 8px 35px 8px 14px;
+    margin-bottom: 20px;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    background-color: #fcf8e3;
+    border: 1px solid #fbeed5;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    color: #c09853;
+    padding-top: 14px;
+    padding-bottom: 14px;
+}
+    .feedbackPanel li{
+        text-decoration: none;
+        list-style: none;
+    }
+
+/*        FILTERS               */
+.s-filter{}
+    .s-filter > form{ margin: 0;}
+.s-filter-items{ margin: 0;}
+    .s-filter-items > li{
+        display: inline-block;
+        margin-left: 20px;
+    }
+    .s-filter-items > li:first-child {margin-left: 0;}
+
+/*          TABLE                */
+.wicket_orderUp, .wicket_orderDown, .wicket_orderNone{
+    display: block;
+    color: #333;
+}
+    .wicket_orderUp:hover, .wicket_orderDown:hover, .wicket_orderNone:hover{
+        text-decoration: none;
+    }
+    .wicket_orderUp{
+        background: url('../img/sort_asc.png') no-repeat center right;
+    }
+    .wicket_orderDown{
+        background: url('../img/sort_desc.png') no-repeat center right;
+    }
+    .wicket_orderNone{
+        background: url('../img/sort_both.png') no-repeat center right;
+    }
+
+.s-table-head{
+    background-color: #fafafa;
+    background-image: -moz-linear-gradient(top, #ffffff, #f2f2f2);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#f2f2f2));
+    background-image: -webkit-linear-gradient(top, #ffffff, #f2f2f2);
+    background-image: -o-linear-gradient(top, #ffffff, #f2f2f2);
+    background-image: linear-gradient(to bottom, #ffffff, #f2f2f2);
+
+    -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
+}
+.table-action{
+    padding: 2px 4px;
 }
 
-* {
-	margin: 0;
-	padding: 0;
+.s-table-subRole{}
+    .s-table-subRole td.role{
+        padding-left: 40px;
+    }
+    .s-table-subRole .btn{
+        padding: 2px 4px;
+    }
+
+/*      COMPONENTS              */
+.s-add-btn{
+    position: absolute;
+    top: 65px;
+    right: 60px;
 }
-.cp-bar {
-	text-align: left;
-	background-color: #E5ECF9;
-	/*border-top: 1px solid #3366CC;*/
-	margin: 0em;
-	padding: 0.5em;
-	height: 10px;
-	border-radius: 5px;
-	-moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
+.s-details-container{
+    width: 50%;
 }
-.superfly-logo{
-  font-size: 250%;
-  margin: 0px;
-  padding: 0px;
-  cursor: pointer;
-  color: #444;
-  text-decoration: none;
-}
-.superfly-info-logo{
-   font-size: small;
-}
-.superfly-header-logo ul{
-  margin-left: 2em;
-  margin-bottom: 1em;
-  list-style-type: none;
-}
-div.line {
-	display: inline;
+    .s-details-head{
+        margin-bottom: 15px;
+    }
+.controls > label{
+    margin: 0;
+    padding-top: 5px;
 }
 
-#userinfo ul li {
-	display: inline;
+.s-dropdown{
+    display: inline;
+}
+    .s-dropdown-menu{
+        top: 20px;
+        right: 0;
+        left: auto;
+    }
+
+.nav .dropdown-toggle .s-user-caret{
+    border-top-color: #999;
+    border-bottom-color: #999;
+}
+        .nav .dropdown-toggle:hover .s-user-caret, .nav .dropdown-toggle:focus .s-user-caret{
+            border-top-color: #fff;
+            border-bottom-color: #fff;
+        }
+
+/*          FORMS        */
+.s-form-horizontal input, .s-form-horizontal textarea, .s-form-horizontal select{
+    width: 300px;
+}
+        .s-form-horizontal textarea{
+            height: 130px;
+        }
+.required > label:after{
+    content: "*";
+    font-size: 16px;
 }
 
-#userinfo {
-	text-align: right;
-	font-size: 13pt;
-	font-weight: 500;
-	border-bottom: 1px solid #aebedc;
-	margin-left: 1em;
-	margin-right: 1em;
-	
-}
 
-.p-unit {
-	padding-top: 1em;
-	padding-left: 1em;
-}
 
-.p-content {
-	padding-left: 1em;
-	text-align: left;
-}
-
-.p-nav {
-	border-right: 3px solid #E5ECF9;
-	font-size: 1em;
-	width: 120px;
-	width: 120px;
-}
-
-.p-nav ul li {
-	list-style-type: none;
-	line-height: 2em;
-}
-
-.p-nav ul li a {
-	padding-left: 1em;
-}
-
-.p-nav ul li a:hover {
-	background: #E5ECF9;
-	color: #000000;
-	text-decoration: none;
-	display: block;
-	font-weight: bold;
-}
-
-.p-nav li a:link,.p-nav li a:visited {
-	text-decoration: none;
-	display: block;
-}
-
-.p-section,.cp-bar {
-	margin-left: 1em;
-	margin-right: 1em;
-}
-
-.p-nav-selected {
-	background-color: #E5ECF9;
-	font-weight: bold;
-	color: #000000;
-}
-
-a:link,a {
-	color: #0000CC;
-}
-
-p,th,td,li,a,legend {
-	font-size: 0.875em;
-}
-
-p {
-	padding: 0.5em 0;
-}
-
-h1 {
-	margin: 0.5em 0.25em;
-	font-size: 1.4em;
-}
-
-h3 {
-	margin: 0.5em 0.25em;
-	font-size: 1.2em;
-}
-
-table {
-	border-collapse: collapse;
-}
-
-table.form td {
-	padding: 0.25em;
-}
-
-table.data {
-	border: 1px solid #C5D7EF;
-	empty-cells: show;
-	margin-bottom: 0.5em;
-	width: 98.5%
-}
-
-table.data thead th {
-	background: #C5D7EF none repeat scroll 0 0;
-	font-weight: bold;
-	vertical-align: bottom;
-	text-align: center;
-	height: 20px;
-}
-
-table.data td {
-	border: 1px solid #C5D7EF;
-	padding: 0.35em 1em 0.25em 0.35em;
-}
-
-table.data td a {
-	margin-left: 0.5em;
-	margin-right: 0.5em;
-}
-table.data td.checkbox-cell,table.data th.checkbox-cell {
-	padding: 0.35em 0.35em 0.25em 0.35em;
-	text-align: center;
-}
-
-.paging-navigator{
-    background: #C5D7EF;
-    height: 5px;
-    rowspan:2;
-    border-top: 1px solid black;
-}
-
-/*.feedbackPanel li {
-	text-align: center;
-	color: black;
-	list-style: none;
-	font-weight: bold;
-}*/
-
-.feedbackPanel {	
-	color: black;
-	background-color: #dee0a6;
-	-moz-border-radius: 4px;
-	list-style: none;
-	font-weight: bold;
-	padding-left: 30px;
-	margin-right: 20px;
-}
-button,input[type='button'],input[type='submit'] {
-	padding: 0.1em .7em;
-}
 
 .dinamicPanel {
 	padding: 1em;
@@ -248,13 +179,6 @@ div.release-date {
 	font-size: 0.9em;
 	padding-bottom: 0.5em;
 	padding-top: 0.5em;
-}
-
-INPUT {
-	order-bottom-left-radius: 2px 2px;
-	border-bottom-right-radius: 2px 2px;
-	border-top-left-radius: 2px 2px;
-	border-top-right-radius: 2px 2px;
 }
 
 table.dataSubRoles {
@@ -419,15 +343,7 @@ table.dataAction td.checkbox-cell,table.dataAction th.checkbox-cell {
   background-repeat: no-repeat;
   background-image: url(../img/remove.png);
 }
-.cont-box {
-	border:2px solid #d0dddd;
-	padding:29px 0 18px 36px;
-	margin:0 100px 30px 0;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-    position: relative;
-}
+
 /*FIELD COMPONENTS*/
 .text-field, .text-field-required {
 	margin: 10px 0;
